# hypercube

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
pyhypercube/src/: main.py  readme.txt
src/: CMakeLists.txt  badgenerator.cpp  badgenerator.h  badgeneratorpy.cpp  circularbuffer.h  hypercubetest.h  indexgenerator.h  main.cpp  randombitgenerator.h
src/badgenerator/: badgenerator.cpp  badgenerator.h  main.cpp
src/hypercube/: hypercube.h  indexgenerator.h  main.cpp  randombitgenerator.h
src/python/: teahypercube.cpp  testhypercube.py
src/python/teahypercube/: __init__.py  teahypercube.cpp  testhypercube.py
src/randomengines/: CMakeLists.txt
src/randomengines/2review/mathfunctions/: teamath.cpp  teamath.h
src/randomengines/2review/multidim/: caterpillar.cpp  caterpillar.h
src/randomengines/auxiliary/: arithmetics.h  arithmetics_test.cpp  inttraits.h
src/randomengines/dynamic/: RNGFactory.cpp  RNGFactory.h  abstractrngengine.cpp  abstractrngengine.h  uniformbitswrapper.cpp  uniformbitswrapper.h
src/randomengines/dynamic/deprecated/: rngbase.cpp  rngbase.h
src/randomengines/static/: rngconcept.h
src/randomengines/static/adapters/: IntUniform.h  inttou01.cpp  inttou01.h  intuniform_test.cpp  uniform01.h
src/randomengines/static/adapters/deprecated/: standardrng.cpp  standardrng.h
src/randomengines/static/uniformrandombitgenerators/gsl/: gslrngwrap.h
src/randomengines/static/uniformrandombitgenerators/stdwrap/: stdrng.h
src/randomengines/static/uniformrandombitgenerators/tea/: lcg.h  lcg_test.cpp
src/randomengines/test/: mctools_tests.cpp
src/stattest/: entest.py  hypercube.py  main.py  rndgen.py
